--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1717,7 +1717,7 @@ h3 {
 #block-views-lesson-collection-block-3 .view-filters {
     float: right;
     margin-top: -88px;
-    width: 584px;
+    // width: 584px;
 }
 #edit-field-portion-tid-wrapper label,
 #edit-field-portion-tid-wrapper .views-widget,
