--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1764,6 +1764,7 @@ h3 {
     overflow-x: hidden;
     overflow-y: scroll;
     width: 940px;
+    border-top: none;
     border-bottom: 1px solid #CCCCCC;
 }
 .tablescroll_wrapper {
