--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1781,6 +1781,9 @@ h3 {
 #lessonCollectionSection table tbody tr td:nth-child(1){
   width: 34px;
 }
+#lessonCollectionSection table tbody tr td:nth-child(2){
+  width: 500px;
+}
 #lessonCollectionSection table thead tr th:nth-child(2) {
     width: 509px !important;
 }
