--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2512,9 +2512,9 @@ div.jp-audio{
 
 
 
-#lessonCollectionSection table thead tr th:nth-child(2){
-  width: 530px!important;
-}
-#lessonCollectionSection table td:nth-child(2){
-  width: 500px!important;
-}
+// #lessonCollectionSection table thead tr th:nth-child(2){
+//   width: 530px!important;
+// }
+// #lessonCollectionSection table td:nth-child(2){
+//   width: 500px!important;
+// }
