--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2386,27 +2386,27 @@ div.jp-audio{
 //   float: none;
 // }
 //resize table
-.type-width {
-    width: 25px !important;
-}
-.title-width{
-  width: 350px!important;
-  padding-right: 10px;
-}
+// .type-width {
+//     width: 25px !important;
+// }
+// .title-width{
+//   width: 350px!important;
+//   padding-right: 10px;
+// }
 
-.author-width{
-  width: 120px!important;
-}
-.duration-width,
-.subtitle-width,
-.release-width{
-    width: 65px !important;
-}
+// .author-width{
+//   width: 120px!important;
+// }
+// .duration-width,
+// .subtitle-width,
+// .release-width{
+//     width: 65px !important;
+// }
 
 
-.watch-width{
-    width: 110px !important;
-}
+// .watch-width{
+//     width: 110px !important;
+// }
 
 /**start scrollling filter**/
 
