--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1795,8 +1795,8 @@ h3 {
 #lessonCollectionSection table tbody tr td:nth-child(5) {
     width: 72px;
 }
-#lessonCollectionSection table thead tr th:last,
-#lessonCollectionSection table tbody tr td:last{
+#lessonCollectionSection table thead tr th:last-child,
+#lessonCollectionSection table tbody tr td:last-child{
   width: 110px;
 }
 .tablescroll_wrapper {
