--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1763,7 +1763,7 @@ h3 {
     width: 940px;
 }
 .view-content tbody {
-    float: left;
+    // float: left;
     max-height: 300px;
     overflow-x: hidden;
     overflow-y: scroll;
