--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -494,6 +494,9 @@ background-color:#653a24;
 #block-block-5 .content p{
      margin-top: 0;
 }
+#block-block-8 .content p{
+     margin-top: 0;
+}
 #block-block-4 p {
     background: $colorWhite;
     margin: 0;
