--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -993,6 +993,15 @@ ul.masonry{
     content:"listen now";
     padding-left: 20px;
 }
+.nowplaying {
+    float: left;
+    margin-left: 20px;
+    width: 100px;
+    font-size: 13px;
+    font-style: italic;
+    font-weight: bold;
+    color:#9C1F19
+}
 /*======= end carousel========*/
 
 /*======= End new css ========*/
