--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -981,7 +981,7 @@ ul.masonry{
     width: 180px;
 }
 .Video_link{
-    // padding-left: 20px;
+    padding-left: 20px;
 }
 .Video_link span{
   display: inline !important;
@@ -995,7 +995,7 @@ ul.masonry{
 }
 .nowplaying {
     float: left;
-    // margin-left: 20px;
+    margin-left: 20px;
     width: 100px;
     font-size: 13px;
     font-style: italic;
