--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -996,7 +996,7 @@ ul.masonry{
 }
 .nowplaying {
     float: left;
-    margin-left: 20px;
+    // margin-left: 20px;
     width: 100px;
     font-size: 13px;
     font-style: italic;
