updated css, added "now playing" for the audio

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -999,6 +999,9 @@ ul.masonry{
     font-weight: bold;
     color:#9C1F19
 }
+.Audio_link .nowplaying {
+    display: block !important;
+}
 /*======= end carousel========*/
 
 /*======= End new css ========*/
