--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -731,8 +731,8 @@ ul.masonry{
 #teachingsControlSection{
     clear: both;
     margin: auto;
-    max-width: 1580px;
-    min-width: 940px;
+    // max-width: 1580px;
+    // min-width: 940px;
     padding: 20px 0 16px;
     height:20px;
     margin-top: 24px;
