--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3013,6 +3013,9 @@ div.jp-audio {
   top: 0;
   margin: 0 !important;
   padding-left: 0 !important;
+  width: 100%;
+  min-width: 100% !important;
+  max-width: 100% !important;
   z-index: 1400 !important;
 }
 
